k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: lostfound-ingress

spec:
  ingressClassName: nginx

  rules:
  - host: lostfound.local

    http:
      paths:
      - path: /
        pathType: Prefix

        backend:
          service:
            name: frontend
            port:
              number: 80
